# lumina

./: README.md  envfile.txt  pyproject.toml
src/generate_gemini_image/: cli.py  config.py  core.py
src/lumina/: cli.py  core.py
tests/: test_core.py
