[project]
name = "generate-gemini-image"
version = "0.1.3"
description = "Modernized Gemini Image Generation CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "typer>=0.15.1",
    "pydantic>=2.0.0",
    "google-genai>=1.0.0",
    "pillow>=12.0.0",
]

[project.scripts]
generate-gemini-image = "generate_gemini_image.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/generate_gemini_image"]

